--- a/views/account/calendar.ejs
+++ b/views/account/calendar.ejs
@@ -7,14 +7,15 @@
     <title>Schedule</title>
 </head>
 <body>
-    <a href="/account">Veiw Scheduled times</a>
-    <h1>Monday: <%= calendar.monday %></h1>
-    <h1>Tuesday: <%= calendar.tuesday %></h1>
-    <h1>Wednesday: <%= calendar.wednesday %></h1>
-    <h1>Thursday: <%= calendar.thursday %></h1>
-    <h1>Friday: <%= calendar.friday %></h1>
-    <h1>Saturday: <%= calendar.saturday %></h1>
-    <h1>Sunday: <%= calendar.sunday %></h1>
+    <a href="/account/newSchedule">Veiw Scheduled times</a>
+    <h1>Monday: <%= Schedule.monday %></h1>
+    <h1>Tuesday: <%= Schedule.tuesday %></h1>
+    <h1>Wednesday: <%= Schedule.wednesday %></h1>
+    <h1>Thursday: <%= Schedule.thursday %></h1>
+    <h1>Friday: <%= Schedule.friday %></h1>
+    <h1>Saturday: <%= Schedule.saturday %></h1>
+    <h1>Sunday: <%= Schedule.sunday %></h1>
+
 
 </body>
 </html>
