--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,12 @@
 <h2>Homepage</h2>
+<a href="/schedule"></a>
+<!-- thiss will beee my home page -->
+
+
+<!-- link to the schdule -->
+
+<!-- link to message -->
+
+<!-- link to char creation -->
+
+<!-- form redirect -->
