--- a/views/character/show.ejs
+++ b/views/character/show.ejs
@@ -1,25 +1,34 @@
 <form method="POST" action="/character/<%= character.id %>/?_method=PUT"> 
 
-    <label for="title">Title</label>
-    <input type="text" name="title" value="<%= character.title%>">
+    <label for="name">Name</label>
+    <input type="text" name="name" value="<%= character.name%>">
   
-    <label for="length">Length</label>
-    <input id="length" type="text" name="length" value="<%= character.length%>">
+    <label for="height">Height</label>
+    <input id="height" type="text" name="height" value="<%= character.height%>">
 
-    <label for="tracks">Tracks</label>
-    <input id="tracks" type="text" name="tracks" value="<%= character.tracks%>">
+    <label for="weight">Weight</label>
+    <input id="weight" type="text" name="weight" value="<%= character.weight%>">
 
     <label for="playCount">Play Count</label>
-    <input id="playCount" type="text" name="playCount" value="<%= character.playCount%>">
+    <input id="playCount" type="text" name="playCount" value="<%= character.strength%>">
 
     <label for="likes">Likes</label>
-    <input id="likes" type="likes" name="likes" value="<%= character.likes%>">
+    <input id="likes" type="likes" name="likes" value="<%= character.constitution%>">
 
     <label for="year">Year</label>
-    <input id="year" type="text" name="year" value="<%= character.year%>">
+    <input id="year" type="text" name="year" value="<%= character.wisdom%>">
 
     <label for="explicit">Explicit</label>
-    <input id="explicit" type="text" name="explicit" value="<%= character.explicit%>">
+    <input id="explicit" type="text" name="explicit" value="<%= character.intelligence%>">
+
+    <label for="explicit">Explicit</label>
+    <input id="explicit" type="text" name="explicit" value="<%= character.charisma%>">
+
+    <label for="explicit">Explicit</label>
+    <input id="explicit" type="text" name="explicit" value="<%= character.race%>">
+
+    <label for="explicit">Explicit</label>
+    <input id="explicit" type="text" name="explicit" value="<%= character.class%>">
   
     <input type="submit">
   </form>
