--- a/views/schedules/new.ejs
+++ b/views/schedules/new.ejs
@@ -1,4 +1,4 @@
-<form method="POST" action="/account/calendar">
+<form method="POST" action="/schedules/show">
 
     <label for="monday">Monday</label>
     <input type="text" name="monday">
