--- a/views/schedules/show.ejs
+++ b/views/schedules/show.ejs
@@ -7,7 +7,7 @@
     <title>Schedule</title>
 </head>
 <body>
-    <a href="/account/newSchedule">Veiw Scheduled times</a>
+    <a href="/schedules/new">Veiw Scheduled times</a>
     <h1>Monday: <%= Schedule.monday %></h1>
     <h1>Tuesday: <%= Schedule.tuesday %></h1>
     <h1>Wednesday: <%= Schedule.wednesday %></h1>
