--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -2,18 +2,18 @@
 <a href="/schedule"></a>
 <!-- thiss will beee my home page -->
 
-<form action="http://localhost:3000/profile">
+<form action="/profile">
     <button type="submit">profile</button>
 </form>
 
 <!-- link to the schdule -->
-<form action="http://localhost:3000/schedules">
+<form action="/schedules">
     <button type="submit">schedule</button>
 </form>
 <!-- link to message -->
 
 <!-- link to char creation -->
-<form action="http://localhost:3000/characters">
+<form action="/characters">
     <button type="submit">characters</button>
     <form>
 
