--- a/views/characters/index.ejs
+++ b/views/characters/index.ejs
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All characters</title>
+    <link rel="stylesheet" href="/css/characters.css">
+
+
 </head>
+
 <body>
-    <% for( let index = 0; index < characters.length; index++ ) { %>
-        <% let a = characters[index]; %> 
-        <% a = a.toJSON() %>
-        <p><%= a.name %></p>
-        <a href="/characters/<%= a.id %>">View characters</a>
-        <hr>
-    <% } %>
+    <% for( let index=0; index < characters.length; index++ ) { %>
+        <% let a=characters[index]; %>
+            <% a=a.toJSON() %>
+                <p>
+                    <%= a.name %>
+                </p>
+                <a href="/characters/<%= a.id %>">View character</a>
+                <hr>
+                <% } %>
 </body>
+
 </html>
