--- a/views/users/admin.ejs
+++ b/views/users/admin.ejs
@@ -7,13 +7,12 @@
     <title>All characters</title>
 </head>
 <body>
-    <% for( let index = 0; index < schedules.length; index++ ) { %>
-        <% let a = schedules[index]; %> 
+    <% for( let index = 0; index < users.length; index++ ) { %>
+        <% let a = users[index]; %> 
         <% a = a.toJSON() %>
         <p><%= a.name %></p>
-        <a href="/schedules/<%= a.id %>">View schedules</a>
+        <a href="/users/<%= a.id %>">View users</a>
         <hr>
     <% } %>
-    <%=  %> 
 </body>
 </html>
