works for now making a backup

--- a/views/characters/kanban.ejs
+++ b/views/characters/kanban.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>bulma cards</title>
+    <title>Characters</title>
     <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
     <!-- Bulma Version 0.9.0-->
     <link rel='stylesheet' href='https://unpkg.com/bulma@0.9.0/css/bulma.min.css'>
@@ -34,33 +34,14 @@
     <section class="hero is-info">
         <div class="hero-body">
             <div class="container">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="content">
-                            <div class="control has-icons-left has-icons-right">
-                                <input class="input is-large" type="search" />
-                                <span class="icon is-medium is-left">
-                                    <i class="fa fa-search"></i>
-                                </span>
-                                <span class="icon is-medium is-right">
-                                    <i class="fa fa-empire"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
     <div class="box cta">
         <div class="columns is-mobile is-centered">
             <div class="field is-grouped is-grouped-multiline">
-                <div class="control"><span class="tag is-link is-large">Link</span></div>
-                <div class="control"><span class="tag is-success is-large">Success</span></div>
-                <div class="control"><span class="tag is-black is-large">Black</span></div>
-                <div class="control"><span class="tag is-warning is-large">Warning</span></div>
-                <div class="control"><span class="tag is-danger is-large">Danger</span></div>
-                <div class="control"><span class="tag is-info is-large">Info</span></div>
+            
             </div>
         </div>
     </div>
